Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1604

md_ucred() shouldn't be called in osd-ldiskfs when running with OFD

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0
    • Lustre 2.3.0
    • None
    • 3
    • 4546

      md_ucred() is called in several places (in osd_push_ctxt() used by quota, but also in __osd_oi_insert()) in osd-ldiskfs. This code ends up calling a function in mdd and should thus not be executed when using OFD.

            johann Johann Lombardi (Inactive)
            johann Johann Lombardi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: